--- a/style.css
+++ b/style.css
@@ -111,4 +111,9 @@ background-color: pink;
 }
 div.footer{
     background-color: pink;
+    position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 80px;
 }
