--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    margin-top: 100px;
+    height: 100%;
+    margin: 0;
 }
 
 
@@ -36,6 +37,7 @@ img {
     display: flex;
         flex-direction: column;
         max-width: 100%;
+        margin: 0;
        }
 
 .navigation-links {
