--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ img {
 footer {
 max-width: 100%;
 font-size: 20px;
-margin: 0;
+margin: 65px 0;
 text-align: center;
 background-color: pink;
 }
