--- a/style.css
+++ b/style.css
@@ -7,14 +7,18 @@
 body {
     max-height: 100%;
     margin: 0;
+    
 }
 
 
-h1,h2,h3 {
+h1,h2 {
     font-size: 24px;
-    text-align: center;  
-    margin: 30px;
-    padding: 15px;
+    padding: 20px;
+}
+h3{
+    font-size:55px ;
+    padding: 40px;
+   
 }
 p {
     background: none;
@@ -28,10 +32,11 @@ p {
 .wrapper{
     display: flex;
         flex-direction: column;
-        max-width: 100%;
+        min-height: 100%;
         margin:0;
        }
        div.container-project{
+        padding-top: 40px;
         margin: 10px;
         max-width: 95%;
        }
@@ -121,13 +126,21 @@ footer{
         font-size: 20px;
 }
 div.footer{
+        flex: 0 0 auto;
         background-color: var(--primary-color);
         color: var(--secondary-color);
         font-size: 20px;
 }
 img {
     display: block;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     margin-left: auto;
     margin-right: auto;
 }
+div.Contact{
+    width: 300px;
+        height: 200px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin: -100px 0 0 -150px;
